test_programs/compile_failure/cast_numeric_to_bool/src/main.nr
fn main() {
    let x = 1;
    let _ = x as bool;

    let x: i32 = 1;
    let _ = x as bool;

    let x: u64 = 1;
    let _ = x as bool;
}
